# flows_coursework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  dinics_solvers.hpp  flows_utils.hpp  interfaces.hpp  link_cut.hpp  main.cpp  readme.md  sample_tests.cpp  stoer_wagner.hpp
.github/workflows/: workflow-main.yml  workflow-push.yml
libraries/: doctest.h
unit-tests/: flows_tests.cpp  flows_utils_tests.cpp  link_cut_tests.cpp  sample_tests.cpp  stoer_wagner_tests.cpp
